# fdx-gsd

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TOOLING-ASSESSMENT.md
apps/cli/: __init__.py  cli.py
core/archive/: __init__.py  alias_manager.py  index.py  models.py  performance.py  realization.py  registry.py
core/canon/: __init__.py
core/confucius/: __init__.py
core/exporters/: __init__.py  fdx_writer.py
core/extraction/: __init__.py  base.py  characters.py  locations.py  patterns.py  scenes.py
core/layout/: __init__.py  camera_math.py  exporter.py  generator.py  models.py
core/resolution/: __init__.py
core/script/: __init__.py  beats.py  builder.py  dialogue.py  sluglines.py
core/scriptgraph/: __init__.py  schema.json
core/shots/: __init__.py  detector.py  exporter.py  models.py  suggester.py  types.py
core/storygraph/: schema.json
core/sync/: __init__.py  change_detector.py  conflict_resolver.py  protected_blocks.py  provenance.py  reingest.py
core/validation/: __init__.py  base.py  knowledge_validator.py  orchestrator.py  props_validator.py  report_generator.py  timeline_validator.py  wardrobe_validator.py
core/vault/: __init__.py  note_writer.py  templates.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  LAYOUT_BRIEF.md  SHOT_DETECTION.md  SUBMODULE_WORKFLOW.md  VALIDATION_RULES.md
docs/adr/: 0001-ner-approach.md  0002-ner-approach.md  README.md  (+3 more)
scripts/: check_req_id.py
(+103 files in other folders)
